# EmbarcaTech_Datalogger

./: CMakeLists.txt  Datalogger.c  README.md
ArquivoDados/: mpu6050.csv  plot.py
lib/: mpu6050.c  mpu6050.h  my_tasks.c  my_tasks.h  sdcard.c  sdcard.h  sensors.c  sensors.h  ssd1306.c  ssd1306.h
